Opdeler part 2 exercise 2

--- a/Assignments/Assignment 2 new.ipynb
+++ b/Assignments/Assignment 2 new.ipynb
@@ -64,8 +64,9 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "32377c21368aea0",
+   "metadata": {},
    "source": [
     "## Part 2 Network Analysis in Computational Social Science\n",
     "\n",
@@ -93,28 +94,89 @@
     ">\n",
     "> 4. *Generate and analyze at least 100 random networks* using the configuration model. For each, calculate the assortativity with respect to the country and plot the distribution of these values. Compare the results with the assortativity of your original network to determine if connections within the same country are significantly higher than chance.\n",
     ">\n"
-   ],
-   "id": "32377c21368aea0"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "c563f33d86340d30",
+   "metadata": {},
    "source": [
     "> __Exercise 2: Zachary's karate club__: In this exercise, we will work on Zarachy's karate club graph (refer to the Introduction of Chapter 9). The dataset is available in NetworkX, by calling the function [karate_club_graph](https://networkx.org/documentation/stable//auto_examples/graph/plot_karate_club.html)\n",
     ">\n",
-    "> 1. Visualize the graph. Set the color of each node based on the club split (the information is stored as a node attribute). My version of the visualization is below.\n",
-    ">\n",
-    "> 2. Write a function to compute the __modularity__ of a graph partitioning (use **equation 9.12** in the book). The function should take a networkX Graph and a partitioning as inputs and return the modularity.\n",
-    "> 3. Explain in your own words the concept of _modularity_.\n",
-    "> 4. Compute the modularity of the Karate club split partitioning using the function you just wrote. Note: the Karate club split partitioning is avilable as a [node attribute](https://networkx.org/documentation/networkx-1.10/reference/generated/networkx.classes.function.get_node_attributes.html), called _\"club\"_.\n",
-    "> 5. Create $1000$ randomized version of the Karate Club network using the _double edge swap_ algorithm you wrote in the exercise above 5. For each of them, compute the modularity of the \"club\" split and store it in a list.\n",
-    "> 6. Compute the average and standard deviation of the modularity for the random network.\n",
-    "> 7. Plot the distribution of the \"random\" modularity. Plot the actual modularity of the club split as a vertical line (use [axvline](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.axvline.html)).\n",
-    "> 8. Comment on the figure. Is the club split a good partitioning? Why do you think I asked you to perform a randomization experiment? What is the reason why we preserved the nodes degree?\n",
-    "> 9.  Use [the Python Louvain-algorithm implementation](https://anaconda.org/auto/python-louvain) to find communities in this graph. Report the value of modularity found by the algorithm. Is it higher or lower than what you found above for the club split? What does this comparison reveal?\n",
+    "> 1. Visualize the graph. Set the color of each node based on the club split (the information is stored as a node attribute). My version of the visualization is below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12471961",
+   "metadata": {},
+   "source": [
+    "> 2. Write a function to compute the __modularity__ of a graph partitioning (use **equation 9.12** in the book). The function should take a networkX Graph and a partitioning as inputs and return the modularity.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd0dd388",
+   "metadata": {},
+   "source": [
+    "> 3. Explain in your own words the concept of _modularity_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e3e2605",
+   "metadata": {},
+   "source": [
+    "> 4. Compute the modularity of the Karate club split partitioning using the function you just wrote. Note: the Karate club split partitioning is avilable as a [node attribute](https://networkx.org/documentation/networkx-1.10/reference/generated/networkx.classes.function.get_node_attributes.html), called _\"club\"_."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3fcb19d",
+   "metadata": {},
+   "source": [
+    "> 5. Create $1000$ randomized version of the Karate Club network using the _double edge swap_ algorithm you wrote in the exercise above 5. For each of them, compute the modularity of the \"club\" split and store it in a list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ef6da9",
+   "metadata": {},
+   "source": [
+    "> 6. Compute the average and standard deviation of the modularity for the random network."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e3654fc",
+   "metadata": {},
+   "source": [
+    "> 7. Plot the distribution of the \"random\" modularity. Plot the actual modularity of the club split as a vertical line (use [axvline](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.axvline.html))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19287d46",
+   "metadata": {},
+   "source": [
+    "> 8. Comment on the figure. Is the club split a good partitioning? Why do you think I asked you to perform a randomization experiment? What is the reason why we preserved the nodes degree?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e02993fe",
+   "metadata": {},
+   "source": [
+    "> 9.  Use [the Python Louvain-algorithm implementation](https://anaconda.org/auto/python-louvain) to find communities in this graph. Report the value of modularity found by the algorithm. Is it higher or lower than what you found above for the club split? What does this comparison reveal?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a448f953",
+   "metadata": {},
+   "source": [
     "> 10.  Compare the communities found by the Louvain algorithm with the club split partitioning by creating a matrix **_D_** with dimension (2 times _A_), where _A_ is the number of communities found by Louvain. We set entry _D_(_i_,_j_) to be the number of nodes that community _i_ has in common with group split _j_. The matrix **_D_** is what we call a [**confusion matrix**](https://en.wikipedia.org/wiki/Confusion_matrix). Use the confusion matrix to explain how well the communities you've detected correspond to the club split partitioning."
-   ],
-   "id": "c563f33d86340d30"
+   ]
   },
   {
    "cell_type": "markdown",
