Retry push Part 2 Excercise 1

--- a/Assignments/Assignment 2 new.ipynb
+++ b/Assignments/Assignment 2 new.ipynb
@@ -22,6 +22,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf31dc6b",
+   "metadata": {},
+   "source": [
+    "Link to Git repository: \n",
+    "\n",
+    "https://github.com/cruesli/CSS_group13\n",
+    "\n",
+    "# Contributions\n",
+    "\n",
+    "Simon 33%$\\\\$\n",
+    "Gustav 33%$\\\\$\n",
+    "Magnus 33%$\\\\$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2182d781-3727-4ff5-9b58-689381202a99",
    "metadata": {},
    "source": [
@@ -94,6 +110,153 @@
     ">\n",
     "> 4. *Generate and analyze at least 100 random networks* using the configuration model. For each, calculate the assortativity with respect to the country and plot the distribution of these values. Compare the results with the assortativity of your original network to determine if connections within the same country are significantly higher than chance.\n",
     ">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3f6080e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import networkx as nx\n",
+    "import netwulf\n",
+    "# Open and read the JSON file\n",
+    "with open('coauthorship_network.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "G = nx.node_link_graph(data, edges='links')\n",
+    "largest_cc = max(nx.connected_components(G), key=len)\n",
+    "S = G.subgraph(largest_cc).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d1047bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 1\n",
+    "import numpy as np\n",
+    "def get_country_assortativity_coef(G):\n",
+    "    degrees = dict(G.degree())\n",
+    "    E = len(G.edges())\n",
+    "\n",
+    "    same_country = 0\n",
+    "    for (i, j) in list(G.edges()): # Compute total amount of edges between nodes of same type\n",
+    "        if G.nodes[i].get('country_code') == G.nodes[j].get('country_code'):\n",
+    "            same_country += 1/E\n",
+    "            \n",
+    "    degs = np.array(list(degrees.values()))\n",
+    "    total_half_stubs = sum(degs)\n",
+    "    country_deg_sum = {}\n",
+    "    for node, data in S.nodes(data=True): # sum up amount of nodes with each country code\n",
+    "        country = data.get('country_code')\n",
+    "        country_deg_sum[country] = country_deg_sum.get(country, 0) + degrees[node]\n",
+    "    \n",
+    "    # Expected fraction of edges between nodes of same type\n",
+    "    exp_same_country = sum((country_half_stubs/total_half_stubs)**2 for country_half_stubs in country_deg_sum.values())\n",
+    "    # Compute assortative coefficient \n",
+    "    r = (same_country - exp_same_country)/(1-exp_same_country)\n",
+    "    return r\n",
+    "r_CSS = get_country_assortativity_coef(S)\n",
+    "print(f'Assortativity coefficients for country: {round(r_CSS,3)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "808b44f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 2\n",
+    "from tqdm import tqdm\n",
+    "import random\n",
+    "def get_config_model(S):\n",
+    "    E = len(S.edges())\n",
+    "    config_model = S.copy()\n",
+    "    edge_set = set(config_model.edges()) # Use sets for efficiency, O(1) lookup\n",
+    "    edges = list(edge_set)\n",
+    "    for i in range(E*10):\n",
+    "        if i%500 == 0: # Only update the edges so often to help computational time, as this is the bottleneck of the function.\n",
+    "            edges = list(edge_set)\n",
+    "        # Sample random edges\n",
+    "        e1 = org_e1 = random.choice(edges)\n",
+    "        e2 = random.choice(edges)\n",
+    "        \n",
+    "        if np.random.rand() > 0.5: # Flip e1 50% of the time\n",
+    "            e1 = e1[::-1]\n",
+    "        if org_e1[0] != e2[1] and e1[1] != e2[0]: # Make sure that the new swapped edges are not between the same nodes\n",
+    "            new_e1 = (e1[0], e2[1])\n",
+    "            new_e2 = (e2[0], e1[1])\n",
+    "            # Add edges to graph if not allready there\n",
+    "            if new_e1 not in edge_set and new_e1[::-1] not in edge_set and new_e2 not in edge_set and new_e2[::-1] not in edge_set:\n",
+    "                config_model.remove_edges_from([org_e1,e2])\n",
+    "                config_model.add_edges_from([new_e1, new_e2])\n",
+    "                # Update set to reflect new graph\n",
+    "                edge_set.discard(org_e1)\n",
+    "                edge_set.discard(e1)\n",
+    "                edge_set.discard(e2)\n",
+    "                edge_set.add(new_e1)\n",
+    "                edge_set.add(new_e2)\n",
+    "                \n",
+    "    return config_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1577ed13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config_model = get_config_model(S)\n",
+    "print('Checking if CSS network and config model has same amount of degrees')\n",
+    "print(len(config_model.degree()), len(S.degree()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76675d1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 3\n",
+    "assortativity_coefs = []\n",
+    "for i in tqdm(range(200)): # Generate 200 random networks using config model and get assortativity for each\n",
+    "    config_model = get_config_model(S)\n",
+    "    assortativity_coefs.append(get_country_assortativity_coef(config_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cb82ca2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(figsize=(6,3))\n",
+    "ax.hist(assortativity_coefs, bins = 50, label = 'Config model r')\n",
+    "ax.axvline(x = r_CSS, color='red', linestyle='--', label='CSS r', alpha = 0.3)\n",
+    "ax.set_xlabel('Assortativity coefficients')\n",
+    "ax.set_ylabel('count')\n",
+    "ax.set_title('Country based Assortativity coefficients for CSS vs config model')\n",
+    "ax.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d272ef",
+   "metadata": {},
+   "source": [
+    "As can be seen above there is a significant difference in the assortativity coefficients of the config models and of the CSS network, which indicates that there is significant evidence that based on country the CSS network is assortative"
    ]
   },
   {
