--- a/Assignments/Assignment 2 new.ipynb
+++ b/Assignments/Assignment 2 new.ipynb
@@ -37,6 +37,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "84145a26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import numpy as np\n",
+    "# mpl setup\n",
+    "mpl.rcParams['image.cmap'] = 'ocean'\n",
+    "plt.rcParams['axes.prop_cycle'] = plt.cycler(color=plt.cm.Set2(np.linspace(0, 1, 8)))\n",
+    "# plt.rcParams['axes.prop_cycle'] = plt.cycler(color = [(225/255,102/255,102/255), (82/255,158/255,205/255),  (194/255,226/255,170/255), (225/255,178/255,102/255), (178/255,102/255,225/255),(225/255,225/255,102/255),(102/255,102/255,225/255)])\n",
+    "mpl.rcParams['font.family'] = 'Helvetica Neue'\n",
+    "mpl.rcParams['figure.figsize'] = (6, 4)\n",
+    "mpl.rcParams['lines.linewidth'] = 1\n",
+    "mpl.rcParams['figure.dpi'] = 200\n",
+    "%config InlineBackend.figure_format = 'retina'\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2182d781-3727-4ff5-9b58-689381202a99",
    "metadata": {},
@@ -65,6 +87,128 @@
     ">    - Based on your visualizations, identify the key differences between the actual and the random networks. Explain whether these differences are consistent with theoretical expectations.\n",
     ">\n",
     ">   \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "707b1b90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.000525508187180047, 7.129569575471698, 13568, 48367)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Part 1\n",
+    "import json\n",
+    "import networkx as nx\n",
+    "import netwulf\n",
+    "# Open and read the JSON file\n",
+    "with open('coauthorship_network.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "G = nx.node_link_graph(data, edges='links')\n",
+    "N = G.number_of_nodes()\n",
+    "L = G.number_of_edges()\n",
+    "L_max = N*(N-1)/2\n",
+    "p = L/L_max\n",
+    "avg_deg = p*(N-1)\n",
+    "p, avg_deg, G.number_of_nodes(), G.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5f3232f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13568, 48541)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "links = defaultdict()\n",
+    "nodes = np.arange(N)\n",
+    "\n",
+    "for i in range(N-1):\n",
+    "    uni_sample = np.random.uniform(0,1,N-(i+1))\n",
+    "    connections = nodes[i+1:][uni_sample < p]\n",
+    "    for j in connections:\n",
+    "        if i != j:\n",
+    "            pair = tuple(sorted([i,j]))\n",
+    "            links[pair] = 1\n",
+    "edgelist = [(i, j) for (i, j) in links.keys()]\n",
+    "rand_net = nx.Graph()\n",
+    "rand_net.add_nodes_from(nodes)\n",
+    "rand_net.add_edges_from(edgelist)\n",
+    "rand_net.number_of_nodes(), rand_net.number_of_edges()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5e8e0c0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Critical threshold: 1, Connectivity treshold: 9.515469358031684\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Critical threshold: 1, Connectivity treshold: {np.log(N)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0fbeb89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degrees = sorted(d for n, d in rand_net.degree())\n",
+    "vals, counts = np.unique(degrees, return_counts=True)\n",
+    "mode_index = np.argmax(counts)\n",
+    "mode = vals[mode_index]\n",
+    "print(f'mean degree: {np.mean(degrees)}, median degree: {np.median(degrees)}, mode of degree: {mode}, min degree: {np.min(degrees)}, max degree: {np.max(degrees)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a7b5c36",
+   "metadata": {},
+   "source": [
+    "As it is a random network, the links are pure chaos as opposed to the CSS network where there is a structure to how authors are linked. Therefore it is difficult to say anything about the structure of the random network. The degree span is also vastly different, with the maximum degree level in the random network only straying a little from the mean, compared to the CSS network, where the difference between the max and mean degree is a factor of about 38. The networks structure is a supercritical structure as it is above the critical treshold and below the connectivity treshold."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad831929",
+   "metadata": {},
+   "source": [
     "> 2. _Shortest Paths_: Here, we will check if the Computational Social Scientists Network exhibits characteristics of a small-world network by analyzing its shortest paths.\n",
     "> * Begin by identifying the largest connected component within the Computational Social Scientists network. Recall that a connected component is a subset of nodes in which every pair of nodes is connected by a path. For a refresher on connected components, see section 2.9 of the Network Science book. Follow these steps:\n",
     ">    - Utilize [``nx.algorithms.connected_components``](https://networkx.org/documentation/stable//reference/algorithms/generated/networkx.algorithms.components.connected_components.html) to enumerate all connected components, which will be returned as a list of node subsets.\n",
@@ -74,9 +218,42 @@
     "> * Reflect on how the average shortest path lengths of the real and random networks compare and answer the following questions, supporting your answers with the theory from the book.\n",
     ">   - Why do you think I asked you to consider the giant component only?\n",
     ">   - Why do you think I asked you to consider unweighted edges?\n",
-    ">   - Does the Computational Social Scientists network exhibit the small-world phenomenon?\n",
-    "\n",
-    "\n"
+    ">   - Does the Computational Social Scientists network exhibit the small-world phenomenon?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1f2fb93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Part 3\n",
+    "largest_cc = max(nx.connected_components(G), key=len)\n",
+    "S_CSS = G.subgraph(largest_cc).copy()\n",
+    "largest_cc = max(nx.connected_components(rand_net), key=len)\n",
+    "S_rand_net = rand_net.subgraph(largest_cc).copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b42350e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "asp_CSS = nx.average_shortest_path_length(S_CSS)\n",
+    "asp_rand_net = nx.average_shortest_path_length(S_rand_net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1037beb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Average shortest path for, CSS: {asp_CSS}, random network: {asp_rand_net}')"
    ]
   },
   {
