--- a/Assignments/Assignment 2 new.ipynb
+++ b/Assignments/Assignment 2 new.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "84145a26",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "707b1b90",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "(0.000525508187180047, 7.129569575471698, 13568, 48367)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,17 +129,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "5f3232f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13568, 48541)"
+       "(13568, 47835)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "5e8e0c0e",
    "metadata": {},
    "outputs": [
@@ -184,10 +184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f0fbeb89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean degree: 7.051149764150943, median degree: 7.0, mode of degree: 6, min degree: 0, max degree: 19\n"
+     ]
+    }
+   ],
    "source": [
     "degrees = sorted(d for n, d in rand_net.degree())\n",
     "vals, counts = np.unique(degrees, return_counts=True)\n",
@@ -228,7 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Part 3\n",
+    "# Part 2\n",
+    "# Esctract giant components as subgraphs\n",
     "largest_cc = max(nx.connected_components(G), key=len)\n",
     "S_CSS = G.subgraph(largest_cc).copy()\n",
     "largest_cc = max(nx.connected_components(rand_net), key=len)\n",
@@ -237,23 +246,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9b42350e",
+   "execution_count": 19,
+   "id": "1037beb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average shortest path for, CSS: 5.702976067981664, random network: 5.095074390471775\n"
+     ]
+    }
+   ],
    "source": [
     "asp_CSS = nx.average_shortest_path_length(S_CSS)\n",
-    "asp_rand_net = nx.average_shortest_path_length(S_rand_net)"
+    "asp_rand_net = nx.average_shortest_path_length(S_rand_net)\n",
+    "print(f'Average shortest path for, CSS: {asp_CSS}, random network: {asp_rand_net}')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1037beb0",
+   "cell_type": "markdown",
+   "id": "fd0ce7c4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "print(f'Average shortest path for, CSS: {asp_CSS}, random network: {asp_rand_net}')"
+    "These are more similar, as could be expected since the small world problem is the only property of random networks that holds true for real world networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfddb141",
+   "metadata": {},
+   "source": [
+    ">   - Why do you think I asked you to consider the giant component only?\n",
+    "\n",
+    "Including the smaller components would skew the average towards a smaller shortest path as they are inherently smaller, \n",
+    " \n",
+    ">   - Why do you think I asked you to consider unweighted edges? \n",
+    "\n",
+    "So that we could compare the unweighted edges of the random network to the edges of the CSS network.\n",
+    "\n",
+    ">   - Does the Computational Social Scientists network exhibit the small-world phenomenon? \n",
+    "\n",
+    "Yes, as on average the shortest path between two nodes is similar to that of the small world problem where there is 6 intermediate nodes"
    ]
   },
   {
@@ -506,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0ff4ca1b",
    "metadata": {},
    "outputs": [],
@@ -550,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "21362353",
    "metadata": {},
    "outputs": [
@@ -584,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4492bc02",
    "metadata": {},
    "outputs": [],
@@ -617,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3352051c",
    "metadata": {},
    "outputs": [
@@ -669,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "da504376",
    "metadata": {},
    "outputs": [
@@ -697,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7c51c76a",
    "metadata": {},
    "outputs": [
@@ -740,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e6decbd4",
    "metadata": {},
    "outputs": [
