Updated part 1 with visualizations

--- a/Assignments/Assignment 2 new.ipynb
+++ b/Assignments/Assignment 2 new.ipynb
@@ -94,19 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "707b1b90",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.000525508187180047, 7.129569575471698, 13568, 48367)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p: 0.000526, Average degree: 7.13,     n nodes: 13568, n edges: 48367\n"
+     ]
     }
    ],
    "source": [
@@ -122,24 +119,24 @@
     "N = G.number_of_nodes()\n",
     "L = G.number_of_edges()\n",
     "L_max = N*(N-1)/2\n",
-    "p = L/L_max\n",
-    "avg_deg = p*(N-1)\n",
-    "p, avg_deg, G.number_of_nodes(), G.number_of_edges()"
+    "p = L/L_max # Calculate p\n",
+    "avg_deg = p*(N-1) # Use p to get average degree\n",
+    "print(f'p: {round(p,6)}, Average degree: {round(avg_deg,2)},     n nodes: {G.number_of_nodes()}, n edges: {G.number_of_edges()}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "5f3232f5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(13568, 47835)"
+       "(13568, 48230)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "5e8e0c0e",
    "metadata": {},
    "outputs": [
@@ -205,11 +202,68 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "6441f3d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/networkx/readwrite/json_graph/node_link.py:142: FutureWarning: \n",
+      "The default value will be `edges=\"edges\" in NetworkX 3.6.\n",
+      "\n",
+      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
+      "\n",
+      "  nx.node_link_data(G, edges=\"links\") to preserve current behavior, or\n",
+      "  nx.node_link_data(G, edges=\"edges\") for forward compatibility.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Change country code to group, to allow netwulf to group authors by country\n",
+    "for k, v in G.nodes(data=True):\n",
+    "    v['group'] = v['country_code']; del v['country_code']\n",
+    "netwulf.visualize(G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "464af233",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: flex;\">\n",
+    "  <img src=\"CSS_net.png\" alt=\"Image 1\" width=\"550\">\n",
+    "  <img src=\"rand_net.png\" alt=\"Image 2\" width=\"550\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00358cd6",
+   "metadata": {},
+   "source": [
+    "On the left is our CSS network, and on the right is the random network. As can be seen there are no distinct clusters of nodes and very little difference in degrees."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0a7b5c36",
    "metadata": {},
    "source": [
-    "As it is a random network, the links are pure chaos as opposed to the CSS network where there is a structure to how authors are linked. Therefore it is difficult to say anything about the structure of the random network. The degree span is also vastly different, with the maximum degree level in the random network only straying a little from the mean, compared to the CSS network, where the difference between the max and mean degree is a factor of about 38. The networks structure is a supercritical structure as it is above the critical treshold and below the connectivity treshold."
+    "As it is a random network, the links are pure chaos as opposed to the CSS network where there is a structure to how authors are linked. Therefore it is difficult to say anything about the structure of the random network other than that it is random. The degree span is also vastly different, with the maximum degree level in the random network only straying a little from the mean, compared to the CSS network, where the difference between the max and mean degree is a factor of about 38. The networks structure is a supercritical structure as it is above the critical treshold and below the connectivity treshold."
    ]
   },
   {
