Changed paths to work with my computer

--- a/Assignments/CSS - Final Project.ipynb
+++ b/Assignments/CSS - Final Project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "55a20c70",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "b6b7d7c6",
    "metadata": {},
    "outputs": [
@@ -34,146 +34,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in: congresstweets-master/data\n",
-      "Contents: ['2017-06-21.json', '2017-06-22.json', '2017-06-23.json', '2017-06-24.json', '2017-06-25.json']\n",
-      "Found 2197 JSON files\n",
-      "Loaded 5068352 tweets\n"
+      "Looking in: congresstweets/data\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>screen_name</th>\n",
-       "      <th>time</th>\n",
-       "      <th>link</th>\n",
-       "      <th>text</th>\n",
-       "      <th>source</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>yesterday</th>\n",
-       "      <th>today</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>877527850420776961</td>\n",
-       "      <td>RepErikPaulsen</td>\n",
-       "      <td>2017-06-21T10:05:17-04:00</td>\n",
-       "      <td>https://www.twitter.com/CRN_Supplements/status...</td>\n",
-       "      <td>RT @CRN_Supplements Thank you @RepErikPaulsen ...</td>\n",
-       "      <td>Twitter Web Client</td>\n",
-       "      <td>17513304</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>877628169028632576</td>\n",
-       "      <td>RepTedBudd</td>\n",
-       "      <td>2017-06-21T16:43:55-04:00</td>\n",
-       "      <td>https://www.twitter.com/RepTedBudd/statuses/87...</td>\n",
-       "      <td>Congrats to our Congressional Award Gold Medal...</td>\n",
-       "      <td>Twitter Web Client</td>\n",
-       "      <td>817138492614524928</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>877580122785685504</td>\n",
-       "      <td>SenatorWicker</td>\n",
-       "      <td>2017-06-21T13:33:00-04:00</td>\n",
-       "      <td>https://www.twitter.com/SenatorWicker/statuses...</td>\n",
-       "      <td>ICYMI: I chaired a hearing to explore expandin...</td>\n",
-       "      <td>TweetDeck</td>\n",
-       "      <td>264219447</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>877655119638048770</td>\n",
-       "      <td>BernieSanders</td>\n",
-       "      <td>2017-06-21T18:31:01-04:00</td>\n",
-       "      <td>https://www.twitter.com/BernieSanders/statuses...</td>\n",
-       "      <td>The Affordable Care Act should be improved. Bu...</td>\n",
-       "      <td>TweetDeck</td>\n",
-       "      <td>216776631</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>877632313550553089</td>\n",
-       "      <td>RepDonBacon</td>\n",
-       "      <td>2017-06-21T17:00:23-04:00</td>\n",
-       "      <td>https://www.twitter.com/RepDonBacon/statuses/8...</td>\n",
-       "      <td>#TaxReform will create a low tax rate just for...</td>\n",
-       "      <td>Hootsuite</td>\n",
-       "      <td>818975124460335106</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   id     screen_name                       time   \n",
-       "0  877527850420776961  RepErikPaulsen  2017-06-21T10:05:17-04:00  \\\n",
-       "1  877628169028632576      RepTedBudd  2017-06-21T16:43:55-04:00   \n",
-       "2  877580122785685504   SenatorWicker  2017-06-21T13:33:00-04:00   \n",
-       "3  877655119638048770   BernieSanders  2017-06-21T18:31:01-04:00   \n",
-       "4  877632313550553089     RepDonBacon  2017-06-21T17:00:23-04:00   \n",
-       "\n",
-       "                                                link   \n",
-       "0  https://www.twitter.com/CRN_Supplements/status...  \\\n",
-       "1  https://www.twitter.com/RepTedBudd/statuses/87...   \n",
-       "2  https://www.twitter.com/SenatorWicker/statuses...   \n",
-       "3  https://www.twitter.com/BernieSanders/statuses...   \n",
-       "4  https://www.twitter.com/RepDonBacon/statuses/8...   \n",
-       "\n",
-       "                                                text              source   \n",
-       "0  RT @CRN_Supplements Thank you @RepErikPaulsen ...  Twitter Web Client  \\\n",
-       "1  Congrats to our Congressional Award Gold Medal...  Twitter Web Client   \n",
-       "2  ICYMI: I chaired a hearing to explore expandin...           TweetDeck   \n",
-       "3  The Affordable Care Act should be improved. Bu...           TweetDeck   \n",
-       "4  #TaxReform will create a low tax rate just for...           Hootsuite   \n",
-       "\n",
-       "              user_id yesterday today  \n",
-       "0            17513304       NaN   NaN  \n",
-       "1  817138492614524928       NaN   NaN  \n",
-       "2           264219447       NaN   NaN  \n",
-       "3           216776631       NaN   NaN  \n",
-       "4  818975124460335106       NaN   NaN  "
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'congresstweets/data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcongresstweets/data\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLooking in:\u001b[39m\u001b[38;5;124m\"\u001b[39m, data_dir)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContents:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m)\u001b[49m[:\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m      6\u001b[0m json_paths \u001b[38;5;241m=\u001b[39m glob\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.json\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(json_paths)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m JSON files\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'congresstweets/data'"
+     ]
     }
    ],
    "source": [
-    "data_dir = \"congresstweets-master/data\"\n",
+    "data_dir = \"congresstweets/data\"\n",
     "\n",
     "print(\"Looking in:\", data_dir)\n",
     "print(\"Contents:\", os.listdir(data_dir)[:5])\n",
@@ -193,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "2c8a3a6e",
    "metadata": {},
    "outputs": [
@@ -325,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
